# kernel-renders-agent

./: .env.example  .gitignore  README.md  pyproject.toml  smoke_test.py
src/kernel_agent/: __init__.py  __main__.py  api_client.py  asset_materializer.py  blend_thumbnail.py  cli.py  config.py  daemon.py  executor.py  gpu_detect.py  library_scan.py  psd_executor.py  psd_scan.py  psd_thumbnail.py  scene_metadata.py  setup_wizard.py  storage.py
src/kernel_scripts/: __init__.py  export_pack.py  inspect_scene.py  psd_export.py  render_views.py  set_cap_color.py  set_view_layer.py  swap_label.py  uv_retexture.py
