[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kernel-renders-agent"
version = "0.1.0"
description = "Render Agent para Kernel Renders. Corre en la PC con GPU, hace polling a la plataforma web y ejecuta Blender headless contra escenas locales."
authors = [{ name = "Kernel Studio" }]
requires-python = ">=3.10"
license = { text = "Proprietary" }
dependencies = [
  "click>=8.1.7",
  "httpx>=0.27.0",
  "python-dotenv>=1.0.0",
  "rich>=13.7.0",
  "platformdirs>=4.2.0",
  "zstandard>=0.22.0",
  "Pillow>=10.0.0",
  "numpy>=1.26.0",
  "OpenEXR>=3.3.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.4",
  "ruff>=0.4.0",
]

[project.scripts]
kernel-agent = "kernel_agent.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM"]
